--- a/Sample/Sample.Android/Properties/AndroidManifest.xml
+++ b/Sample/Sample.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,5 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.BATTERY_STATS" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<application android:label="Sample.Android"></application>
+	<application android:label="Job Plugin Sample"></application>
 </manifest>
