--- a/Plugin.Jobs.Autofac/Plugin.Jobs.Autofac.csproj
+++ b/Plugin.Jobs.Autofac/Plugin.Jobs.Autofac.csproj
@@ -1,15 +1,46 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Authors>aritchie</Authors>
+        <Company />
+        <AssemblyName>Plugin.Jobs.Autofac</AssemblyName>
+        <RootNamespace>Plugin.Jobs.Autofac</RootNamespace>
+        <Description>ACR Jobs Plugin Autofac Extensions for Xamarin and Windows</Description>
+        <Product>$(AssemblyName) ($(TargetFramework))</Product>
+        <PackageVersion>1.0.0-beta2</PackageVersion>
+        <RepositoryUrl>https://github.com/aritchie/jobs</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/aritchie/jobs</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/aritchie/jobs/blob/master/LICENSE.md</PackageLicenseUrl>
+        <PackageIconUrl>https://github.com/aritchie/jobs/raw/master/icon.png</PackageIconUrl>
+        <PackageReleaseNotes>https://github.com/aritchie/jobs/blob/master/docs/changelog.md</PackageReleaseNotes>
+        <PackageTags>ios android uwp windows xamarin jobs background</PackageTags>
 
-  <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.8.1" />
-  </ItemGroup>
+        <RepositoryType>git</RepositoryType>
+        <IncludeSymbols>True</IncludeSymbols>
+        <IncludeSource>True</IncludeSource>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Plugin.Jobs\Plugin.Jobs.csproj" />
-  </ItemGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <DebugType>full</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DebugType>pdbonly</DebugType>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Plugin.Jobs\Plugin.Jobs.csproj" />
+    </ItemGroup>
 
 </Project>
