--- a/Plugin.Jobs/Plugin.Jobs.csproj
+++ b/Plugin.Jobs/Plugin.Jobs.csproj
@@ -54,6 +54,10 @@ Supported Platforms
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
     </ItemGroup>
 
+    <ItemGroup Condition=" $(TargetFrameworks.StartsWith('netstandard'))">
+        <Compile Include="Platforms\netstandard\**\*.cs" />
+    </ItemGroup>
+
     <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
         <Compile Include="Platforms\Android\**\*.cs" />
     </ItemGroup>
