--- a/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
+++ b/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
@@ -8,7 +8,7 @@
         <RootNamespace>Plugin.Jobs.DryIoc</RootNamespace>
         <Description>ACR Jobs Plugin DryIoc Extensions for Xamarin and Windows</Description>
         <Product>$(AssemblyName) ($(TargetFramework))</Product>
-        <PackageVersion>1.0.0-beta4</PackageVersion>
+        <PackageVersion>1.0.0</PackageVersion>
         <RepositoryUrl>https://github.com/aritchie/jobs</RepositoryUrl>
         <PackageProjectUrl>https://github.com/aritchie/jobs</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/aritchie/jobs/blob/master/LICENSE.md</PackageLicenseUrl>
