--- a/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
+++ b/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
@@ -6,7 +6,7 @@
         <Company />
         <AssemblyName>Plugin.Jobs.DryIoc</AssemblyName>
         <RootNamespace>Plugin.Jobs.DryIoc</RootNamespace>
-        <Description>ACR Jobs Plugin DryIoc Extensions for Xamarin and Windows</Description>
+        <Description>ACR Background Jobs Plugin Autofac Extensions</Description>
         <Product>$(AssemblyName) ($(TargetFramework))</Product>
         <PackageVersion>1.0.0</PackageVersion>
         <RepositoryUrl>https://github.com/aritchie/jobs</RepositoryUrl>
