--- a/Sample/Sample.UWP/Sample.UWP.csproj
+++ b/Sample/Sample.UWP/Sample.UWP.csproj
@@ -144,6 +144,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.2.0.871581</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Plugin.Jobs\Plugin.Jobs.csproj">
