--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="Acr.XamForms" Version="3.2.0" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="ReactiveUI" Version="8.7.2" />
     <PackageReference Include="ReactiveUI.Fody" Version="8.7.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
