--- a/Plugin.Jobs.Autofac/Plugin.Jobs.Autofac.csproj
+++ b/Plugin.Jobs.Autofac/Plugin.Jobs.Autofac.csproj
@@ -36,7 +36,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.8.1" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" Condition=" '$(OS)' == 'Windows_NT' " />
     </ItemGroup>
 
     <ItemGroup>
