--- a/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
+++ b/Plugin.Jobs.DryIoc/Plugin.Jobs.DryIoc.csproj
@@ -36,7 +36,7 @@
 
     <ItemGroup>
         <PackageReference Include="DryIoc.dll" Version="3.0.2" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" Condition=" '$(OS)' == 'Windows_NT' " />
     </ItemGroup>
 
     <ItemGroup>
