--- a/Plugin.Jobs/Plugin.Jobs.csproj
+++ b/Plugin.Jobs/Plugin.Jobs.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/1.6.68">
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;MonoAndroid80;Xamarin.iOS10</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;MonoAndroid81;MonoAndroid90;Xamarin.iOS10</TargetFrameworks>
         <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">$(TargetFrameworks);uap10.0.16299</TargetFrameworks>
         <Authors>aritchie</Authors>
         <Company />
@@ -48,9 +48,9 @@ Supported Platforms
     <ItemGroup>
         <Compile Remove="Platforms\**\*.cs" />
         <None Include="Platforms\**\*.cs" />
-        <PackageReference Include="Acr.Core" Version="3.0.0" />
+        <PackageReference Include="Acr.Core" Version="3.0.1" />
         <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
-        <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" Condition=" '$(OS)' == 'Windows_NT' " />
     </ItemGroup>
 
@@ -59,19 +59,19 @@ Supported Platforms
     </ItemGroup>
 
     <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
-        <PackageReference Include="Xamarin.Essentials" Version="1.0.0" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
         <Compile Include="Platforms\Android\**\*.cs" />
         <Compile Include="Platforms\Shared\**\*.cs" />
     </ItemGroup>
 
     <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
-        <PackageReference Include="Xamarin.Essentials" Version="1.0.0" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
         <Compile Include="Platforms\iOS\**\*.cs" />
         <Compile Include="Platforms\Shared\**\*.cs" />
     </ItemGroup>
 
     <ItemGroup Condition=" $(TargetFramework.StartsWith('uap')) ">
-        <PackageReference Include="Xamarin.Essentials" Version="1.0.0" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
         <Compile Include="Platforms\Uwp\**\*.cs" />
         <Compile Include="Platforms\Shared\**\*.cs" />
     </ItemGroup>
